--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -13,6 +13,7 @@
                 <h2>Quantity: <%= p.quantity %></h2>
                 <form action="/cart-delete-item" method="POST">
                   <input type="hidden" value="<%= p.productID._id %>" name="productID">
+                  <input type="hidden" name="_csrf" value="<% csrfToken %>" />
                   <button class="btn danger" type="submit">Delete</button>
                 </form>
             </li>
@@ -21,6 +22,7 @@
         <div class="centered">
           <form action="/create-order" method="POST">
             <br>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
             <button class="btn" type="submit">Order Now</button>
           </form>
         </div>
